--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -22,8 +22,13 @@ btnFilter=Filter
 btnClearFilter=Clear Filter
 showCity=Show City
 hideCity=Hide City
+tableShowDetails=Show Details
 
 #Table Orders
 orderID=Order ID
 freight=Freight
 shipAddress=Ship Address
+
+#Dialog Orders
+orders=Orders
+close=Close
