--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -32,3 +32,14 @@ shipAddress=Ship Address
 #Dialog Orders
 orders=Orders
 close=Close
+
+#Layout
+layout=Layout
+employeeDetails=Employee Details
+
+#Employee Details
+employeeID=Employee ID
+titleEmployee=Title Employee
+countryCode=Country Code
+countryCity=Country City
+postalCode=Postal Code
