--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -43,3 +43,18 @@ titleEmployee=Title Employee
 countryCode=Country Code
 countryCity=Country City
 postalCode=Postal Code
+
+#Incidence
+incidence=Incidence
+europe=Europe
+us=United State
+createIncidence=Create Incidence
+incidenceDate=Date
+incidenceReason=Reason
+incidenceType=Type
+incidenceCorrect=Correct
+incidencePending=Pending
+incidenceError=Error
+today=Today
+tomorrow=Tomorrow
+yesterday=Yesterday
