--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -58,12 +58,14 @@ incidenceError=Error
 today=Today
 tomorrow=Tomorrow
 yesterday=Yesterday
+errorCreationDateValue=Invalid Date 
+confirmDeleteIncidence=Are You Sure you want to delete the incidence?
 
 #OData
-odataSaveOk=Incidence Saved
-odataSaveKO=Incidence Not Saved
+odataSaveOK=Incidence Saved
+odataSaveKO=Incidence NOT Saved
 odataNoChanges=No changes have been made
-onUpdateok=Incidence Updated
-onUpdateKO=Incidence Not Updated
-onDeleteok=Incidence Deleted
-onDeleteKO=Incidence Not Deleted
+odataUpdateOK=Incidence Updated
+odataUpdateKO=Incidence NOT Updated
+odataDeleteOK=Incidence Deleted
+odataDeleteKO=Incidence NOT Deleted
