--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -28,6 +28,9 @@ tableShowDetails=Show Details
 orderID=Order ID
 freight=Freight
 shipAddress=Ship Address
+orderDate=Order Date
+shipName=Ship Name
+customerID=Customer ID
 
 #Dialog Orders
 orders=Orders
