--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -75,3 +75,7 @@ odataDeleteKO=Incidence NOT Deleted
 
 #Signature
 clear=Clear Signature
+
+#Order Details
+orderProducts=Products
+availableStock=Available Stock
