--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -75,6 +75,10 @@ odataDeleteKO=Incidence NOT Deleted
 
 #Signature
 clear=Clear Signature
+saveSignatura= Save
+fillSignature=Please sign the order
+signatureSaved=Signature Saved
+signatureNotSaved=Signature Not Saved
 
 #Order Details
 orderProducts=Products
